--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,33 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Home from "@/components/Home.astro";
+import UserHome from "@/components/UserHome.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Home Page">
+	<div id="user-home" style="display: none;">
+		<UserHome />
+	</div>
+	<div id="home" style="display: none;">
+		<Home />
+	</div>
 </Layout>
+
+<script>
+	window.addEventListener("DOMContentLoaded", () => {
+		const homeElement = document.getElementById("home");
+		const userHomeElement = document.getElementById("user-home");
+
+		if (localStorage.getItem("token")) {
+			if (homeElement && userHomeElement) {
+				homeElement.style.display = "none";
+				userHomeElement.style.display = "block";
+			}
+		} else {
+			if (homeElement && userHomeElement) {
+				homeElement.style.display = "block";
+				userHomeElement.style.display = "none";
+			}
+		}
+	});
+</script>
