--- a/src/components/UserHome.astro
+++ b/src/components/UserHome.astro
@@ -1,30 +1,11 @@
 ---
-import ProblemCard from "./ProblemCard.astro";
-
-type Problem = {
-    id: number;
-    title: string;
-    description: string;
-};
-
-const problems: Problem[] = await fetch("http://localhost:5000/problems").then(
-    (res) => res.json(),
-);
-
-console.log(problems);
+import ProblemCards from "./ProblemCards.astro";
 ---
 
-<article class="prose">
-    <h1>Problems</h1>
-    <div class="grid gap-4 grid-cols-1 md:grid-cols-2">
-        {
-            problems.map((problem) => (
-                <ProblemCard
-                    title={problem.title}
-                    description={problem.description}
-                    id={problem.id}
-                />
-            ))
-        }
-    </div>
+<article class="prose w-full">
+	<p>Good day</p>
+	<h1>Problems</h1>
+	<ProblemCards server:defer>
+		<p slot="fallback">...</p>
+	</ProblemCards>
 </article>
