--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,8 +1,8 @@
 ---
-import Head from "@/components/partials/Head.astro";
+import Head from "@/components/layout/Head.astro";
 
 interface Props {
-    title: string;
+	title: string;
 }
 
 const { title } = Astro.props;
@@ -10,23 +10,23 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-    <head>
-        <Head title={title} />
-    </head>
-    <body>
-        <slot />
-    </body>
+	<head>
+		<Head title={title} />
+	</head>
+	<body>
+		<slot />
+	</body>
 </html>
 
 <style>
-    * {
-        margin: 0;
-    }
+	* {
+		margin: 0;
+	}
 
-    html,
-    body {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-    }
+	html,
+	body {
+		margin: 0;
+		width: 100%;
+		height: 100%;
+	}
 </style>
