--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,90 +1,84 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import { API_ENDPOINTS } from "@/helpers/consts";
+import FormLayout from "@/layouts/FormLayout.astro";
+
+if (Astro.cookies.get("token")) {
+	return Astro.redirect("/");
+}
+
+const api = API_ENDPOINTS.LOGIN;
 ---
 
-<Layout title="Login">
-    <div class="hero bg-base-200 min-h-screen">
-        <div class="hero-content flex-col lg:flex-row-reverse">
-            <div class="text-center lg:text-left">
-                <h1 class="text-5xl font-bold">Login</h1>
-                <p class="py-6">
-                    Welcome back, secret agent. Your mission, should you choose
-                    to accept it, is to remember your password.
-                </p>
-            </div>
-            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-                <form class="card-body" id="login-form">
-                    <div class="form-control">
-                        <label class="label">
-                            <span class="label-text">Email</span>
-                        </label>
-                        <input
-                            type="email"
-                            placeholder="email"
-                            name="email"
-                            class="input input-bordered"
-                            required
-                        />
-                    </div>
-                    <div class="form-control">
-                        <label class="label">
-                            <span class="label-text">Password</span>
-                        </label>
-                        <input
-                            type="password"
-                            placeholder="password"
-                            name="password"
-                            class="input input-bordered"
-                            required
-                        />
-                        <label class="label">
-                            <a href="#" class="label-text-alt link link-hover"
-                                >Forgot password?</a
-                            >
-                        </label>
-                    </div>
-                    <div class="form-control mt-6">
-                        <button
-                            class="btn btn-primary"
-                            id="login-btn"
-                            type="submit">Login</button
-                        >
-                    </div>
-                    <div class="form-control mt-6">
-                        <a class="btn btn-outline btn-primary" href="/register/"
-                            >Sign Up</a
-                        >
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</Layout>
+<FormLayout
+	title="Login"
+	description="Welcome back, secret agent. Your mission, should you choose to accept it, is to remember your password."
+>
+	<form class="card-body" id="login-form" data-api={api}>
+		<div class="form-control">
+			<label class="label">
+				<span class="label-text">Email</span>
+			</label>
+			<input
+				type="email"
+				placeholder="email"
+				name="email"
+				class="input input-bordered"
+				required
+			/>
+		</div>
+		<div class="form-control">
+			<label class="label">
+				<span class="label-text">Password</span>
+			</label>
+			<input
+				type="password"
+				placeholder="password"
+				name="password"
+				class="input input-bordered"
+				required
+			/>
+			<label class="label">
+				<a href="#" class="label-text-alt link link-hover"
+					>Forgot password?</a
+				>
+			</label>
+		</div>
+		<div class="form-control mt-6">
+			<button class="btn btn-primary" id="login-btn" type="submit"
+				>Login</button
+			>
+		</div>
+		<div class="form-control mt-6">
+			<a class="btn btn-outline btn-primary" href="/register/">Sign Up</a>
+		</div>
+	</form>
+</FormLayout>
 
 <script>
-    const form = document.getElementById("login-form") as HTMLFormElement;
+	const form = document.getElementById("login-form") as HTMLFormElement;
+	const api = form.dataset.api as string;
 
-    form.addEventListener("submit", async (e: Event) => {
-        e.preventDefault();
-        const formData = new FormData(form);
-        const formDataObject = Object.fromEntries(formData.entries());
+	form.addEventListener("submit", async (e: Event) => {
+		e.preventDefault();
+		const formData = new FormData(form);
+		const formDataObject = Object.fromEntries(formData.entries());
 
-        const response = await fetch("http://localhost:5000/auth/login", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify(formDataObject),
-        });
+		const response = await fetch(api, {
+			method: "POST",
+			headers: {
+				"Content-Type": "application/json",
+			},
+			body: JSON.stringify(formDataObject),
+		});
 
-        const data = await response.json();
+		const data = await response.json();
 
-        if (response.ok) {
-            localStorage.setItem("token", data.token);
-            window.location.href = "/";
-            alert("Login successful");
-        } else {
-            alert("Invalid email or password");
-        }
-    });
+		if (response.ok) {
+			document.cookie = `token=${data.token}; path=/;`;
+			window.location.href = "/";
+			alert("Login successful");
+		} else {
+			alert("Invalid email or password");
+		}
+	});
 </script>
